<resources>
    <string name="app_name">Code Quiz</string>
    <string name="logo">Logo</string>
    <string name="personal_info_notice">We are just curious enough to know about you.</string>
    <string name="name_prompt">Enter your name</string>
    <string name="name">Name</string>
    <string name="age_prompt">Enter your age</string>
    <string name="age">Age</string>
    <string name="save_info">save info</string>
    <string name="show_name">NAME:</string>
    <string name="show_score">SCORE:</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="ins1">1. This game is completely for educational purpose</string>
    <string name="ins2">2. this game includes questions from C, C++, java, python etc.</string>
    <string name="ins3">3. you will get 10 points when you make the answer right</string>
    <string name="ins4">4. THERE is no negative points</string>
    <string name="ins5">happy learning!</string>
    <string name="play">PLAY</string>
    <string name="player_info">player info</string>
    <string name="show_age">AGE:</string>
    <string name="high_score">HIGH SCORE:</string>
    <string name="copy_code_quiz">©CODE QUIZ</string>
    <string name="delete_player_info">delete player info</string>
    <string name="q1">QUESTION 1</string>
    <string name="q1_txt">Third W in WWW stands for</string>
    <string name="btn_q1a">WEB</string>
    <string name="btn_q1b">WIDE</string>
    <string name="btn_q1c">WORLD</string>
    <string name="next">NEXT</string>
    <string name="q2">QUESTION 2</string>
    <string name="q2_txt">The latest version of windows operating system</string>
    <string name="btn_q2a">WINDOWS 8</string>
    <string name="btn_q2b">WINDOWS 10</string>
    <string name="btn_q2c">WINDOWS XP</string>
    <string name="q3">QUESTION 3</string>
    <string name="q3_txt">WHAT IS THE FULLFORM OF GPU</string>
    <string name="btn_q3a">geographic program unit</string>
    <string name="btn_q3b">GRAPHICS PROCESSING UNIT</string>
    <string name="btn_q3c">GRAPHICS PROGRAM UNIT</string>
    <string name="q4">QUESTION 4</string>
    <string name="q4_txt">CHOOSE MOBILE OPERATING SYSTEM FROM THE LIST</string>
    <string name="btn_q4a">ANDROID</string>
    <string name="btn_q4b">UBUNTU</string>
    <string name="btn_q4c">MAC OS</string>
    <string name="q5">QUESTION 5</string>
    <string name="q5_txt">WHO INNOVATED APPLE INC.</string>
    <string name="btn_q5a">BILL GATES</string>
    <string name="btn_q5b">JOHNY IVE</string>
    <string name="btn_q5c">STEVE JOBS</string>
    <string name="results">Results</string>
    <string name="back">BACK</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_scored">you scored</string>
</resources>
