<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InstructionActivity"
    android:background="#085980">

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/score_rectangle">

        <TextView
            android:id="@+id/label_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#085980"
            android:textSize="20sp"
            android:text="@string/show_score"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/bowlby_one_sc"/>

        <TextView
            android:id="@+id/top_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#085980"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_toEndOf="@id/label_score"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bowlby_one_sc"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/ins_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/ins1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ins_head"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/ins1"/>

    <TextView
        android:id="@+id/ins2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ins1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/ins2"/>

    <TextView
        android:id="@+id/ins3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ins2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/ins3"/>


    <TextView
        android:id="@+id/ins4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ins3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/ins4"/>

    <TextView
        android:id="@+id/ins5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ins4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/ins5"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ins5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#4CAF50"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_p_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/player_info"
        android:textColor="#085980"
        android:textSize="20sp" />



</androidx.constraintlayout.widget.ConstraintLayout>