<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ques1Activity"
    android:background="#085980">

    <LinearLayout
        android:id="@+id/ll"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_name"
                android:textColor="#085980"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/bowlby_one_sc"/>

            <TextView
                android:id="@+id/top_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#085980"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:fontFamily="@font/bowlby_one_sc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#085980"
                android:textSize="20sp"
                android:text="@string/show_score"
                android:layout_marginTop="10dp"
                android:layout_marginStart="90dp"
                android:fontFamily="@font/bowlby_one_sc"/>

            <TextView
                android:id="@+id/top_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#085980"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bowlby_one_sc"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/q1_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:textSize="30sp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/q1_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/q1_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/q1_txt"/>


    <Button
        android:id="@+id/btn_q1a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/q1_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/white"
        android:textColor="#085980"
        android:text="@string/btn_q1a"
        android:textSize="15sp"
        android:fontFamily="@font/bowlby_one_sc"/>

    <Button
        android:id="@+id/btn_q1b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_q1a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/white"
        android:textColor="#085980"
        android:text="@string/btn_q1b"
        android:textSize="15sp"
        android:fontFamily="@font/bowlby_one_sc"/>

    <Button
        android:id="@+id/btn_q1c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_q1b"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/white"
        android:textColor="#085980"
        android:text="@string/btn_q1c"
        android:textSize="15sp"
        android:fontFamily="@font/bowlby_one_sc"/>

    <Button
        android:id="@+id/btn_q2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_q1c"
        app:layout_constraintTop_toBottomOf="@id/btn_q1c"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="150dp"
        android:drawableEnd="@drawable/next_ques"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</androidx.constraintlayout.widget.ConstraintLayout>