<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayerInfoActivity"
    android:background="#085980">

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/score_rectangle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="28sp"
            android:textAlignment="center"
            android:fontFamily="@font/bowlby_one_sc"/>

    </RelativeLayout>



    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll"
        android:layout_below="@id/ll"
        android:layout_marginTop="20dp"
        android:text="@string/show_name"
        android:textSize="25sp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="@android:color/white"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/tv_p_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="@android:color/white"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/txt_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_p_name"
        android:layout_marginTop="20dp"
        android:text="@string/show_age"
        android:textSize="25sp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="@android:color/white"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/tv_p_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_age"
        android:layout_below="@id/txt_age"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:fontFamily="@font/bowlby_one_sc"
        android:textColor="@android:color/white"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/btn_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/red"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/delete_player_info"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_footer"
        android:layout_marginBottom="150dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/txt_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_code_quiz"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_below="@id/btn_del"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/bowlby_one_sc"/>

</androidx.constraintlayout.widget.ConstraintLayout>